pkg/controller/appdefinition/testdata/networkpolicy/service/existing.yaml
---
apiVersion: v1
data:
  config: '{"podCIDRs":["10.42.0.0/24"]}'
kind: ConfigMap
metadata:
  name: acorn-config
  namespace: acorn-system
