pkg/controller/appdefinition/testdata/networkpolicy/service/expected.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: acorn-my-app-one-publish-one
  namespace: my-app-namespace
  labels:
    "acorn.io/managed": "true"
spec:
  podSelector:
    matchLabels:
      acorn.io/app-name: my-app
      acorn.io/app-namespace: acorn
      acorn.io/managed: "true"
      port-number.acorn.io/8080: "true"
      port-number.acorn.io/9090: "true"
      service-name.acorn.io/one: "true"
  ingress:
    - from:
        - ipBlock:
            cidr: "0.0.0.0/0"
            except: ["10.42.0.0/24"]
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: acorn-system
      ports:
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: UDP
  policyTypes:
    - Ingress
